# image-calculator

./: .gitignore  CMakeLists.txt  README.md  app
include/: aritmethic-operations.hpp  logic-operations.hpp  transformations.hpp
src/: aritmethic-operations.cpp  logic-operations.cpp  main.cpp  minus.cpp  negative_img.cpp  transformations.cpp
